--- a/_posts/2014-01-01-intro.md
+++ b/_posts/2014-01-01-intro.md
@@ -1,8 +1,24 @@
 ---
-title: "home"
+title: "Home"
 bg: white     #defined in _config.yml, can use html color like '#010101'
 color: black  #text color
 style: center
 ---
 
-# Example headline!
+# **Avi Srivastava**
+*अवि स्रिवास्तव*
+
+### PhD Student
+
+#### [Computational Bology and Network Evolution lab](ttps://github.com/COMBINE-lab)
+
+##### Stony Brook University, New York
+
+<style type="text/css">
+  span.codedirection { unicode-bidi:bidi-override; direction: rtl; }
+</style>
+
+<i class="fa fa-envelope"></i> 
+<span class="codedirection">
+ude.koorbynots@avatsavirs.iva
+</span>
