--- a/_posts/2014-01-02-art.md
+++ b/_posts/2014-01-02-art.md
@@ -1,5 +1,5 @@
 ---
-title: "Art"
+title: "CV"
 bg: turquoise  #defined in _config.yml, can use html color like '#0fbfcf'
 color: white   #text color
 fa-icon: paint-brush
