--- a/_posts/2014-01-01-intro.md
+++ b/_posts/2014-01-01-intro.md
@@ -1,12 +1,12 @@
 ---
 title: "Home"
-bg: white     #defined in _config.yml, can use html color like '#010101'
-color: black  #text color
+bg: black     #defined in _config.yml, can use html color like '#010101'
+color: white #text color
 style: center
 ---
 
-# **Avi Srivastava**
-*अवि स्रिवास्तव*
+# **Avi Srivastava** 
+*अवी श्रीवास्तव*
 
 ### PhD Student
 
