temp working website

--- a/_posts/2014-01-01-intro.md
+++ b/_posts/2014-01-01-intro.md
@@ -1,24 +1,47 @@
 ---
 title: "Home"
 bg: black     #defined in _config.yml, can use html color like '#010101'
-color: white #text color
+color: gold #text color
 style: center
 ---
 
-# **Avi Srivastava** 
-*अवी श्रीवास्तव*
+<div class="container">
+<div class="row">
+  <div class="column half">
+	<div class="round-image"></div>
+	<div style="padding-top:120px;">
+		<h1 style="text-align:right; padding-right: 0px"><strong>Avi</strong></h1>
+		<h1 style="text-align:right; padding-right: 0px; line-height: 0.2;"><strong>Srivastava</strong></h1>
+		<h4 style="text-align:right; padding-right: 0px;"> <strong> PhD Candidate </strong> </h4>
+		<h4 style="text-align:right"> Comp. Bio. and Network Evolution lab</h4>
+		<h4 style="text-align:right"> Stony Brook University</h4>
+		
+	</div>
+  </div>
+  <div class="column half">
+	<div style="text-align: left">
+    	<h3 style="text-align:left"><i class="fa fa-leaf text-grey"></i>&nbsp;About अवी श्रीवास्तव</h3>
+    	<h4 style="text-align:left">I am currently a Ph.D candidate in <a href="https://www.cs.stonybrook.edu/" target="blank">Computer Science Department</a>
+at <a href="" target="blank">Stony Brook University</a>. 
+My current research interest include Computational Biology, Statistical Machine Learning, Parallel Computation and Computer Vision. </h4>
+		<h4 style="text-align:left"> Outside academics I can be found watching sci-fi TV shows, working out in gym, also an amateur sailor and bass player. </h4>
+	</div>
+  </div>
+</div>
+</div>
 
-### PhD Student
-
-#### [Computational Bology and Network Evolution lab](ttps://github.com/COMBINE-lab)
-
-##### Stony Brook University, New York
 
 <style type="text/css">
   span.codedirection { unicode-bidi:bidi-override; direction: rtl; }
 </style>
 
-<i class="fa fa-envelope"></i> 
+<i class="fa fa-envelope"></i>
 <span class="codedirection">
 ude.koorbynots@avatsavirs.iva
 </span>
+
+
+<h3 class="more-icons">
+<a href="https://github.com/keyavi"><i class="fa fa-github-square text-grey"></i></a> <a href="https://www.linkedin.com/in/avi-srivastava-3a703814"><i class="fa fa-linkedin-square text-grey"></i></a>
+<a href="https://twitter.com/k3yavi"><i class="fa fa-twitter-square text-grey"></i></a>
+</h3>
