created jekyll site

--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -1,28 +1,23 @@
 ---
-title: "home"
 bg: white
 color: black
 style: center
 ---
-
-### *whoa, hey an open-source*
+### Verify user signup over email with NodeJS and MongoDB!
 {: .text-purple}
 
-<span class="fa-stack subtlecircle" style="font-size:100px; background:rgba(255,166,0,0.1)">
-  <i class="fa fa-circle fa-stack-2x text-white"></i>
-  <i class="fa fa-bicycle fa-stack-1x text-orange"></i>
-</span>
+# <img src="https://github.com/whitef0x0/node-email-verification/raw/master/design/logo.png" data-canonical-src="https://github.com/whitef0x0/node-email-verification/raw/master/design/logo.png" width="48"/> Node Email Verification
 
-# single-page jekyll theme
+[![Build Status](https://travis-ci.org/whitef0x0/node-email-verification.svg?branch=master)](https://travis-ci.org/whitef0x0/node-email-verification)
+[![Code Climate](https://codeclimate.com/github/whitef0x0/node-email-verification/badges/gpa.svg)](https://codeclimate.com/github/whitef0x0/node-email-verification)
+[![Codacy Badge](https://api.codacy.com/project/badge/Grade/dad0c103e43e4ac79a118ea5bd0537dd)](https://www.codacy.com/app/david-baldwin/node-email-verification?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=whitef0x0/node-email-verification&amp;utm_campaign=Badge_Grade)
+[![Gitter](https://badges.gitter.im/whitef0x0/node-email-verification.svg)](https://gitter.im/whitef0x0/node-email-verification?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge)
+
+
+
+# Install now via npm.
 {: .text-purple}
 
+```npm install email-verification```
 
-…it's focused on delivering information quickly, easily, configurably, and stylishly!
-
-Want to make a single-page site to show off something cool? Go [fork me on github!](https://github.com/t413/SinglePaged)
-
-<span id="forkongithub">
-  <a href="{{ site.source_link }}" class="bg-blue">
-    Fork me on GitHub
-  </a>
-</span>
+…now email-verification is installed in your project and you're ready to roll
