--- a/_posts/2000-01-05-usage.md
+++ b/_posts/2000-01-05-usage.md
@@ -5,59 +5,177 @@ color: white
 fa-icon: plug
 ---
 
-Alright, you've got a clean copy and are ready to push some schmancy pages for the world to ogle at.
 
-- Edit `_config.yml` to change your title, keywords, and description.
-- Create a new file in `_posts/` called `2014-01-01-intro.md`
-  Edit it, and add:
+# Quick Example/Guide
 
-{% highlight text linenos=table %}
----
-title: "home"
-bg: white     #defined in _config.yml, can use html color like '#010101'
-color: black  #text color
-style: center
----
+**Before you start, make sure you have a directory structure like so:**
+```
+app/
+-- userModel.js
+-- tempUserModel.js
+node_modules/
+server.js
+```
 
-# Example headline!
-and so on..
-{% endhighlight %}
+### Step 1: Add your dependencies
 
-- Create a second post called `2014-01-02-art.md` with an divider image this time:
+All of the code in this section takes place in server.js. Note that `mongoose` has to be passed as an argument when requiring the module:
 
-{% highlight text linenos=table %}
----
-title: "Art"
-bg: turquoise  #defined in _config.yml, can use html color like '#0fbfcf'
-color: white   #text color
-fa-icon: paint-brush
----
+```javascript
+var User = require('./app/userModel'),
+    mongoose = require('mongoose'),
+    nev = require('email-verification')(mongoose);
+mongoose.connect('mongodb://localhost/YOUR_DB');
+```
 
-#### A new section- oh the humanity!
-{% endhighlight %}
+### Step 2: Configure your settings
 
-**Note:** That part `fa-icon: paint-brush` will use a font-awesome icon of [paint-brush](http://fortawesome.github.io/Font-Awesome/icon/paint-brush/). You can use any icon from this [font-awesome icon directory](http://fortawesome.github.io/Font-Awesome/icons/).
+Next, make sure to configure the options (see the section below for more extensive detail on this):
 
-- install Jekyll with `sudo gem install github-pages`
-- run `jekyll serve -w`
-  - visit [localhost:4000](http://localhost:4000) to see a live locally served preview.
-- Push changes and see them live!
+```javascript
+nev.configure({
+    verificationURL: 'http://myawesomewebsite.com/email-verification/${URL}',
+    persistentUserModel: User,
+    tempUserCollection: 'myawesomewebsite_tempusers',
 
+    transportOptions: {
+        service: 'Gmail',
+        auth: {
+            user: 'myawesomeemail@gmail.com',
+            pass: 'mysupersecretpassword'
+        }
+    },
+    verifyMailOptions: {
+        from: 'Do Not Reply <myawesomeemail_do_not_reply@gmail.com>',
+        subject: 'Please confirm account',
+        html: 'Click the following link to confirm your account:</p><p>${URL}</p>',
+        text: 'Please confirm your account by clicking the following link: ${URL}'
+    }
+}, function(error, options){
+});
+```
 
+*Note:* Any options not included in the object you pass will take on the default value specified in the section below. Calling `configure` multiple times with new options will simply change the previously defined options.
 
+### Step 3: Create a Temporary user Model
 
-## **Changing your colors**
-{: style="margin-top:100px;"}
+To create a temporary user model, you can either generate it using a built-in function, or you can predefine it in a separate file. If you are pre-defining it, it must be IDENTICAL to the user model with an extra field for the URL; the default one is `GENERATED_VERIFYING_URL: String`.
 
-- In each post file you can define `bg: mycolor` and `color: myothercolor` to change the background and text colors for that section.
-- **mycolor** can be a quoted html color like `'#0fbfcf'` or a key to a special color defined in **_config.yml** under 'colors'.
-  - **Note:** Changes to _config.yml require a manual restart to your local server with `^C` and `jekyll serve -w`.
+```javascript
+// configuration options go here...
 
-Nifty, right!
+// generating the model, pass the User model defined earlier
+nev.generateTempUserModel(User);
 
+// using a predefined file
+var TempUser = require('./app/tempUserModel');
+nev.configure({
+    tempUserModel: TempUser
+}, function(error, options){
+});
+```
 
+### Step 4: Create a TempUser Model in your Signup Handler
 
-### Also see **README.md** [*on github!*](https://github.com/t413/SinglePaged#usage)
-{: style="margin-top:100px;"}
+Then, create an instance of the User model, and then pass it as well as a custom callback to `createTempUser`. Inside your `createTempUser` callback, make a call to the `sendVerificationEmail` function.
 
+```javascript
+// get the credentials from request parameters or something
+var email = "...",
+    password = "...";
 
+var newUser = User({
+    email: email,
+    password: password
+});
+
+nev.createTempUser(newUser, function(err, existingPersistentUser, newTempUser) {
+    // some sort of error
+    if (err)
+        // handle error...
+
+    // user already exists in persistent collection...
+    if (existingPersistentUser)
+        // handle user's existence... violently.
+
+    // a new user
+    if (newTempUser) {
+        var URL = newTempUser[nev.options.URLFieldName];
+        nev.sendVerificationEmail(email, URL, function(err, info) {
+            if (err)
+                // handle error...
+
+            // flash message of success
+        });
+
+    // user already exists in temporary collection...
+    } else {
+        // flash message of failure...
+    }
+});
+```
+
+### Step 4.5: Hash your users password
+*Note:* An email will be sent to the email address that the user signed up with. If you are interested in hashing the password (which you probably should be), all you need to do is set the option `hashingFunction` to a function that takes the parameters `password, tempUserData, insertTempUser, callback` and returns `insertTempUser(hash, tempUserData, callback)`
+
+```javascript
+// sync version of hashing function
+var myHasher = function(password, tempUserData, insertTempUser, callback) {
+  var hash = bcrypt.hashSync(password, bcrypt.genSaltSync(8), null);
+  return insertTempUser(hash, tempUserData, callback);
+};
+
+// async version of hashing function
+myHasher = function(password, tempUserData, insertTempUser, callback) {
+  bcrypt.genSalt(8, function(err, salt) {
+    bcrypt.hash(password, salt, function(err, hash) {
+      return insertTempUser(hash, tempUserData, callback);
+    });
+  });
+};
+```
+
+### Step 5: Confirm your user and save your user to persistent storage
+To move a user from the temporary storage to 'persistent' storage (e.g. when they actually access the URL we sent them), we call `confirmTempUser`, which takes the URL as well as a callback with two parameters: an error, and the instance of the User model (or `null` if there are any errors, or if the user wasn't found - i.e. their data expired).
+
+If you want to send a confirmation email, then inside the `confirmTempUser` callback,  make a call to the `sendConfirmationEmail` function, which takes two parameters: the user's email and a callback. This callback takes two parameters: an error if any occured, and the information returned by Nodemailer.
+
+```javascript
+var url = '...';
+nev.confirmTempUser(url, function(err, user) {
+    if (err)
+        // handle error...
+
+    // user was found!
+    if (user) {
+        // optional
+        nev.sendConfirmationEmail(user['email_field_name'], function(err, info) {
+            // redirect to their profile...
+        });
+    }
+
+    // user's data probably expired...
+    else
+        // redirect to sign-up
+});
+```
+
+### Step 5.5: Allow user to resend verification email
+If you want the user to be able to request another verification email, simply call `resendVerificationEmail`, which takes the user's email address and a callback with two parameters: an error, and a boolean representing whether or not the user was found.
+
+```javascript
+var email = '...';
+nev.resendVerificationEmail(email, function(err, userFound) {
+    if (err)
+        // handle error...
+
+    if (userFound)
+        // email has been sent
+    else
+        // flash message of failure...
+});
+```
+
+To see a fully functioning example that uses Express as the backend, check out the [**examples section**](https://github.com/whitef0x0/node-email-verification/tree/master/examples/express).
+
+**NEV supports Bluebird's PromisifyAll!** Check out the examples section for that too.
