--- a/_posts/2000-01-06-updating.md
+++ b/_posts/2000-01-06-updating.md
@@ -1,20 +1,125 @@
 ---
-title: "updating"
+title: "documentation"
 bg: purple
 color: white
-fa-icon: cloud-upload
+fa-icon: book
 ---
 
-## Updating
+## API Documentation
+* [`configure`](#configure)
+* [`generateTempUserModel`](#generateTempUserModel)
+* [`createTempUser`](#createTempUser)
+* [`sendVerificationEmail`](#sendVerificationEmail)
+* [`confirmTempUser`](#confirmTempUser)
+* [`sendConfirmationEmail`](#Options)
+* [`resendVerificationEmail`](#resendVerificationEmail)
+* [`Options`](#Options)
 
-So you've got a copy running and there's some new update? Let's update!
+<a name="configure"></a>
+### `configure(optionsToConfigure, callback(err, options))`
+Changes the default configuration by passing an object of options to configure (`optionsToConfigure`); see the section below for a list of all options. `options` will be the result of the configuration, with the default values specified below if they were not given. If there are no errors, `err` is `null`.
 
-1. Checkout your github-pages branch
-  - `git checkout gh-pages` for a standalone or existing page
-  - `git checkout master` for a *username.github.io* page
-2. run `git remote | grep -q "singlepage" || git remote add -t publish singlepage https://github.com/t413/SinglePaged.git` to be sure you have access to this repository (you can run this command at any time).
-2. `git fetch singlepage` to fetch-in-place new changes.
-3. Update to the new base (using merge)
-    1. `git merge singlepage/publish`
-4. You can alternatively update using rebase. This *rewrites history* (**bad**), but it is cleaner.
-    1. `git rebase singlepage/publish`
+<a name="generateTempUserModel"></a>
+### `generateTempUserModel(UserModel, callback(err, tempUserModel))`
+Generates a Mongoose Model for the temporary user based off of `UserModel`, the persistent user model. The temporary model is essentially a duplicate of the persistent model except that it has the field `{GENERATED_VERIFYING_URL: String}` for the randomly generated URL by default (the field name can be changed in the options). If the persistent model has the field `createdAt`, then an expiration time (`expires`) is added to it with a default value of 24 hours; otherwise, the field is created as such:
+
+```javascript
+{
+    ...
+    createdAt: {
+        type: Date,
+        expires: 86400,
+        default: Date.now
+    }
+    ...
+}
+```
+
+`tempUserModel` is the Mongoose model that is created for the temporary user. If there are no errors, `err` is `null`.
+
+Note that `createdAt` will not be transferred to persistent storage (yet?).
+
+<a name="createTempUser"></a>
+### `createTempUser(user, callback(err, newTempUser))`
+Attempts to create an instance of a temporary user model based off of an instance of a persistent user, `user`, and add it to the temporary collection. `newTempUser` is the temporary user instance if the user doesn't exist in the temporary collection, or `null` otherwise. If there are no errors, `err` is `null`.
+
+If a temporary user model hasn't yet been defined (generated or otherwise), `err` will NOT be `null`.
+
+<a name="sendVerificationEmail"></a>
+### `sendVerificationEmail(email, url, callback(err, info))`
+Sends a verification email to to the email provided, with a link to the URL to verify the account. If sending the email succeeds, then `err` will be `null` and `info` will be some value. See [Nodemailer's documentation](https://github.com/andris9/Nodemailer#sending-mail) for information.
+
+<a name="confirmTempUser"></a>
+### `confirmTempUser(url, callback(err, newPersistentUser))`
+Transfers a temporary user (found by `url`) from the temporary collection to the persistent collection and removes the URL assigned with the user. `newPersistentUser` is the persistent user instance if the user has been successfully transferred (i.e. the user accessed URL before expiration) and `null` otherwise; this can be used for redirection and what not. If there are no errors, `err` is `null`.
+
+<a name="sendConfirmationEmail"></a>
+### `sendConfirmationEmail(email, callback(err, info))`
+Sends a confirmation email to to the email provided. If sending the email succeeds, then `err` will be `null` and `info` will be some value. See [Nodemailer's documentation](https://github.com/andris9/Nodemailer#sending-mail) for information.
+
+<a name="resendVerificationEmail"></a>
+### `resendVerificationEmail(email, callback(err, userFound))`
+Resends the verification email to a user, given their email. `userFound` is `true` if the user has been found in the temporary collection (i.e. their data hasn't expired yet) and `false` otherwise. If there are no errors, `err` is `null`.
+
+<a name="Options"></a>
+## Options
+Here are the default options:
+
+```javascript
+var options = {
+    verificationURL: 'http://example.com/email-verification/${URL}',
+    URLLength: 48,
+
+    // mongo-stuff
+    persistentUserModel: null,
+    tempUserModel: null,
+    tempUserCollection: 'temporary_users',
+    emailFieldName: 'email',
+    passwordFieldName: 'password',
+    URLFieldName: 'GENERATED_VERIFYING_URL',
+    expirationTime: 86400,
+
+    // emailing options
+    transportOptions: {
+        service: 'Gmail',
+        auth: {
+            user: 'user@gmail.com',
+            pass: 'password'
+        }
+    },
+    verifyMailOptions: {
+        from: 'Do Not Reply <user@gmail.com>',
+        subject: 'Confirm your account',
+        html: '<p>Please verify your account by clicking <a href="${URL}">this link</a>. If you are unable to do so, copy and ' +
+                'paste the following link into your browser:</p><p>${URL}</p>',
+        text: 'Please verify your account by clicking the following link, or by copying and pasting it into your browser: ${URL}'
+    },
+    shouldSendConfirmation: true,
+    confirmMailOptions: {
+        from: 'Do Not Reply <user@gmail.com>',
+        subject: 'Successfully verified!',
+        html: '<p>Your account has been successfully verified.</p>',
+        text: 'Your account has been successfully verified.'
+    },
+
+    hashingFunction: null,
+}
+```
+
+- **verificationURL**: the URL for the user to click to verify their account. `${URL}` determines where the randomly generated part of the URL goes, and is needed. Required.
+- **URLLength**: the length of the randomly-generated string. Must be a positive integer. Required.
+
+- **persistentUserModel**: the Mongoose Model for the persistent user.
+- **tempUserModel**: the Mongoose Model for the temporary user. you can generate the model by using `generateTempUserModel` and passing it the persistent User model you have defined, or you can define your own model in a separate file and pass it as an option in `configure` instead.
+- **tempUserCollection**: the name of the MongoDB collection for temporary users.
+- **emailFieldName**: the field name for the user's email. If the field is nested within another object(s), use dot notation to access it, e.g. `{local: {email: ...}}` would use `'local.email'`. Required.
+- **passwordFieldName**: the field name for the user's password. If the field is nested within another object(s), use dot notation to access it (see above). Required.
+- **URLFieldName**: the field name for the randomly-generated URL. Required.
+- **expirationTime**: the amount of time that the temporary user will be kept in collection, measured in seconds. Must be a positive integer. Required.
+
+- **transportOptions**: the options that will be passed to `nodemailer.createTransport`.
+- **verifyMailOptions**: the options that will be passed to `nodemailer.createTransport({...}).sendMail` when sending an email for verification. You must include `${URL}` somewhere in the `html` and/or `text` fields to put the URL in these strings.
+- **shouldSendConfirmation**: send an email upon the user verifiying their account to notify them of verification.
+- **confirmMailOptions**: the options that will be passed to `nodemailer.createTransport({...}).sendMail` when sending an email to notify the user that their account has been verified. You must include `${URL}` somewhere in the `html` and/or `text` fields to put the URL in these strings.
+
+- **hashingFunction**: the function that hashes passwords. Must take four parameters `password, tempUserData, insertTempUser, callback` and return `insertTempUser(hash, tempUserData, callback)`.
