--- a/_posts/2000-01-02-why.md
+++ b/_posts/2000-01-02-why.md
@@ -1,5 +1,5 @@
 ---
-title: "Why"
+title: "About"
 bg: blue
 color: white
 fa-icon: check-square-o
@@ -7,24 +7,14 @@ fa-icon: check-square-o
 
 #### Basically
 
-# this theme rocks.
+## This npm module is awesome
 
-Got some *killer app*, some *neat project*, a cool portfolio? Make an easy single-page site to show it all off. SinglePaged uses jekyll niceties to make a ***polished, modular, and beautiful* single page site**.
+Are you making a *MEAN* stack app and need double opt-in user signups? Use ```node-email-verification``` and add user email verification to your MEAN app in minutes!
 
-Oh-- go see [some examples](https://github.com/t413/SinglePaged#fancy-jekyll-powered-single-page-site)!
+The way this works is as follows:
 
-- Each vertical section is a markdown file in **_posts/** directory.
-  * They're sorted by 'date'. (we don't use date anywhere, it only sorts)
-- Each vertical section sets it's own **color**, **header icon** (or image), **title**, and easy-to-write markdown body.
-- Only **two things** to edit:
-  1. Edit `_config.yml` to set the site title, description, etc
-  2. Add `_posts/*.md` to make each vertical section. Copy some examples and add the sections from your README.md for a fast start!
-- Easy adding of **SEO terms**, **favicon** & such, and **google analytics token**.
+- temporary user is created with a randomly generated URL assigned to it and then saved to a MongoDB collection
+- email is sent to the email address the user signed up with
+- when the URL is accessed, the user's data is transferred to the real collection
 
-Sound good? Let's go!
-
-There are three way to get started: (links jump to that section)
-
-1. Make a [**user homepage**](#setup-as-user-homepage) (or organization)
-2. Make a [**standalone project**](#setup-as-standalone-project-page) page
-3. Make a [site under an **existing project**](#setup-inside-existing-project)
+A temporary user document has a TTL of 24 hours by default, but this (as well as many other things) can be configured. See the options section for more details. It is also possible to resend the verification email if needed.
