--- a/_posts/2000-01-03-details.md
+++ b/_posts/2000-01-03-details.md
@@ -5,53 +5,83 @@ color: black
 fa-icon: toggle-on
 ---
 
-## Setup as user homepage
+## Installation
 
-- Go click **fork** on the [github project page](https://github.com/t413/SinglePaged)
-- Rename your new repository to `**username**.github.io`. (click settings in the right column)
-- Clone your repository, **cd into the project**
-- Run `git checkout publish && git branch -m master && git push -u origin master && git branch -D gh-pages` to get the *publish* branch as master for a clean, empty starting point.
-- On your github project page go to *settings* again and change your **default branch** to ***master***
-- Run `git push origin --delete gh-pages` to delete your remote's development branch
+**First make sure you have NodeJS and MongoDB installed.**
 
-Now hop over to [Usage](#usage) to get it running with your own stuff!
+Then install express.
 
-**When you publish changes use `git push -u origin master`**
+```
+npm install express
+```
 
--------------------------
+Then install email-verification
 
+```
+npm install email-verification
+```
 
-## Setup as standalone project page
+Then set your options. Make sure that you have a
 
-- Go click **fork** on the [github project page](https://github.com/t413/SinglePaged)
-- Rename your new repository to `whatever you want`. (click settings in the right column)
-  * It will go live at yourusername.github.io/**WhateverYouWant**
-- Clone your repository, cd into the project
-- Run `git checkout publish && git branch -D gh-pages && git branch -m gh-pages && git push -uf origin gh-pages` to swap the *publish* and *gh-pages* branch.
+```javascript
+mongoose = require('mongoose');
+nev = require('email-verification')(mongoose);
+nev.configure({
+    verificationURL: 'http://example.com/email-verification/${URL}',
+    URLLength: 48,
 
-Now hop over to [Usage](#usage) to get it running with your own stuff!
+    // mongo-stuff
+    persistentUserModel: null,
+    tempUserModel: null,
+    tempUserCollection: 'temporary_users',
+    emailFieldName: 'email',
+    passwordFieldName: 'password',
+    URLFieldName: 'GENERATED_VERIFYING_URL',
+    expirationTime: 86400,
 
-**When you publish changes use `git push -u origin gh-pages`**
+    // emailing options
+    transportOptions: {
+        service: 'Gmail',
+        auth: {
+            user: 'user@gmail.com',
+            pass: 'password'
+        }
+    },
+    verifyMailOptions: {
+        from: 'Do Not Reply <user@gmail.com>',
+        subject: 'Confirm your account',
+        html: '<p>Please verify your account by clicking <a href="${URL}">this link</a>. If you are unable to do so, copy and ' +
+                'paste the following link into your browser:</p><p>${URL}</p>',
+        text: 'Please verify your account by clicking the following link, or by copying and pasting it into your browser: ${URL}'
+    },
+    shouldSendConfirmation: true,
+    confirmMailOptions: {
+        from: 'Do Not Reply <user@gmail.com>',
+        subject: 'Successfully verified!',
+        html: '<p>Your account has been successfully verified.</p>',
+        text: 'Your account has been successfully verified.'
+    },
 
--------------------------
+    hashingFunction: null,
+});
+```
 
+Then setup node-mailer with your specified email provider
 
-## Setup inside existing project
+```
+var nodemailer = require('nodemailer');
+var smtpTransport = nodemailer.createTransport({
+    from: 'replyemail@example.com',
+    options: {
+        host: 'smtp.example.com',
+        port: 587,
+        auth: {
+            user: 'your_smtp_username',
+            pass: 'your_smtp_email'
+        }
+    }
+);
+```
 
-This is the most complicated use-case .. but it's the coolest.
-Say you've got your kickass project `github.com/t413/kicker` and want to have
-some web presence to post about on [hacker news](http://news.ycombinator.com).
-This will create an orphan branch called `gh_pages` in your repository
-where you can publish changes, posts, images, and such. It won't alter your code at all.
-
-- `cd` into your project on the command line
-- use `git remote add -t publish singlepage git@github.com:t413/SinglePaged.git` to get access to this repository.
-- use `git fetch singlepage publish:gh-pages` to fetch the remote branch
-- use `git branch --set-upstream gh-pages singlepage/publish && git checkout gh-pages;`
-  This creates and checks out an orphan branch called gh-pages that tracks the original and lets you make changes.
-- When you run `git push gh-pages:origin/gh-pages` it'll be live at *yourusername.github.io/repositoryName*
-
-Now hop over to [Usage](#usage) to get it running with your own stuff!
-
-**When you publish changes use `git push -u origin gh-pages`**
+After this you should be now ready to start using node-email-verification!
 
