added fork me on github badge

--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -21,3 +21,9 @@ style: center
 ```npm install email-verification```
 
 …now email-verification is installed in your project and you're ready to roll
+
+<span id="forkongithub">
+  <a href="{{ site.source_link }}" class="bg-blue">
+    Fork me on GitHub
+  </a>
+</span>
